--- a/naunet/templates/data/COshielding_VB88.dat.j2
+++ b/naunet/templates/data/COshielding_VB88.dat.j2
@@ -1,32 +1,18 @@
+{% set spec = "__device__" if general.device == "gpu" else "const" %}
 // Table of CO self-shielding factor
 // H2 column density
-{% if general.device == "gpu" %}
-__device__
-{% else %}
-const
-{% endif %}
-double COShieldingTableX[6] = 
+{{ spec }} double COShieldingTableX[6] = 
 {% raw -%}
 {18.0, 19.0, 20.0, 21.0, 22.0, 23.0};
 {% endraw %}
 
 // CO column density
-{% if general.device == "gpu" %}
-__device__
-{% else %}
-const
-{% endif %}
-double COShieldingTableY[7] = 
+{{ spec }} double COShieldingTableY[7] = 
 {% raw -%}
 {12.0, 13.0, 14.0, 15.0, 16.0, 17.0, 18.0};
 {% endraw %}
 
-{% if general.device == "gpu" %}
-__device__
-{% else %}
-const
-{% endif %}
-double COShieldingTable[6][7] = 
+{{ spec }} double COShieldingTable[6][7] = 
 {% raw -%}
 {{ 0.000e+00, -1.408e-02, -1.099e-01, -4.400e-01, -1.154e+00, -1.888e+00, -2.760e+00},
  {-8.539e-02, -1.015e-01, -2.104e-01, -5.608e-01, -1.272e+00, -1.973e+00, -2.818e+00},
