--- a/naunet/templates/data/N2shielding_11.2bH2_1e20nH.dat.j2
+++ b/naunet/templates/data/N2shielding_11.2bH2_1e20nH.dat.j2
@@ -1,22 +1,13 @@
+{% set spec = "__device__" if general.device == "gpu" else "const" %}
 // Table of N2 self-shielding factor
 // Excitation temperature
-{% if general.device == "gpu" %}
-__device__
-{% else %}
-const
-{% endif %}
-double N2ShieldingTableX[5] = 
+{{ spec }} double N2ShieldingTableX[5] = 
 {% raw -%}
 {10.0, 30.0, 50.0, 100.0, 1000.0};
 {% endraw %}
 
 // H2 column density
-{% if general.device == "gpu" %}
-__device__
-{% else %}
-const
-{% endif %}
-double N2ShieldingTableY[46] = 
+{{ spec }} double N2ShieldingTableY[46] = 
 {% raw -%}
 {1.000e+14, 1.585e+14, 2.512e+14, 3.981e+14, 6.310e+14, 1.000e+15, 1.585e+15,
  2.512e+15, 3.981e+15, 6.310e+15, 1.000e+16, 1.585e+16, 2.512e+16, 3.981e+16,
@@ -28,12 +19,7 @@ double N2ShieldingTableY[46] =
 {% endraw %}
 
 // N2 column density
-{% if general.device == "gpu" %}
-__device__
-{% else %}
-const
-{% endif %}
-double N2ShieldingTableZ[46] = 
+{{ spec }} double N2ShieldingTableZ[46] = 
 {% raw -%}
 {1.000e+10, 1.585e+10, 2.512e+10, 3.981e+10, 6.310e+10, 1.000e+11, 1.585e+11,
  2.512e+11, 3.981e+11, 6.310e+11, 1.000e+12, 1.585e+12, 2.512e+12, 3.981e+12,
@@ -44,12 +30,7 @@ double N2ShieldingTableZ[46] =
  2.512e+18, 3.981e+18, 6.310e+18, 1.000e+19};
 {% endraw %}
 
-{% if general.device == "gpu" %}
-__device__
-{% else %}
-const
-{% endif %}
-double N2ShieldingTable[5][46][46] = 
+{{ spec }} double N2ShieldingTable[5][46][46] = 
 {% raw -%}
 {{{9.375e-01, 9.374e-01, 9.372e-01, 9.369e-01, 9.364e-01, 9.356e-01,
    9.344e-01, 9.325e-01, 9.295e-01, 9.249e-01, 9.179e-01, 9.073e-01,
