--- a/naunet/templates/tests/cloud/renorm.py.in.j2
+++ b/naunet/templates/tests/cloud/renorm.py.in.j2
@@ -20,12 +20,12 @@ y[species.index("CL")] = 4.0e-9 * nH
 y = np.ones(len(species)+has_thermal) * 1e-40
 y[species.index("H2")] = 0.4 * nH
 y[species.index("H")]  = 1e-3 * nH
-y[species.index("HE")] = 1.9e-1 * nH
+y[species.index("He")] = 1.9e-1 * nH
 y[species.index("N")]  = 7.5e-5 * nH
 y[species.index("O")]  = 8.0e-5 * nH
 y[species.index("CO")] = 2.8e-4 * nH
 y[species.index("S")]  = 4.0e-8 * nH
-y[species.index("SI")] = 2.0e-9 * nH
-y[species.index("MG")] = 2.0e-9 * nH
-y[species.index("CL")] = 1.0e-9 * nH
+y[species.index("Si")] = 2.0e-9 * nH
+y[species.index("Mg")] = 2.0e-9 * nH
+y[species.index("Cl")] = 1.0e-9 * nH
 {% endblock updated_abundance %}
