--- a/naunet/templates/base/cpp/tests/CMakeLists.txt.j2
+++ b/naunet/templates/base/cpp/tests/CMakeLists.txt.j2
@@ -90,7 +90,7 @@ if(MAKE_PYTHON)
                     ${CMAKE_COMMAND} -E env 
                         PYNAUNET_PATH=$<TARGET_FILE_DIR:${PYMODNAME}>
                         NAUNET_CONFIG_PATH=${CMAKE_SOURCE_DIR}
-                    ${Python3_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/${name}.py
+                    ${Python_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/${name}.py
             )
         endif()
     endforeach(name ${PYTESTTARGETS})
